[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/syylk.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/maul.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/sevrina.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/manto.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/zark.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/torik.png" type="Texture" id=6]
[ext_resource path="res://UnitSelector.gd" type="Script" id=7]

[node name="UnitSelector" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 44.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 100.0
margin_bottom = 274.0

[node name="SelectZark" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 41.0
text = "Zark"
icon = ExtResource( 5 )

[node name="SelectSyylk" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 100.0
margin_bottom = 86.0
text = "Syylk"
icon = ExtResource( 1 )

[node name="SelectSevrina" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 100.0
margin_bottom = 139.0
text = "Sevrina"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectTorik" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 100.0
margin_bottom = 182.0
text = "Torik"
icon = ExtResource( 6 )

[node name="SelectManto" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 100.0
margin_bottom = 224.0
text = "Manto"
icon = ExtResource( 4 )

[node name="SelectMaul" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 100.0
margin_bottom = 274.0
text = "Maul"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectZark" to="." method="_on_SelectZark_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectSyylk" to="." method="_on_SelectSyylk_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectSevrina" to="." method="_on_SelectSevrina_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectTorik" to="." method="_on_SelectTorik_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectManto" to="." method="_on_SelectManto_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectMaul" to="." method="_on_SelectMaul_pressed"]
